--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ dependencies:
 - base >=4.7 && <5
 - text >=1.0 && <2.0
 - time >=1.6 && <2.0
+- pretty-show >=1.6 && <2.0
 library:
   source-dirs: src
   ghc-options: -Wall
